Thu Jun  4 13:55:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSCharacterSet.m: prepare for GC
	* Source/NSString.m: prepare for GC
	* Source/NSTimer.m: tidied and added timeInterval method
	* Source/include/NSTimer.h: tidied and added timeInterval method
	* Source/NSArchiver.m: Fixed memory leak in ([-init])

Tue Jun  2 10:50:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSSerializer.m: Added uniquing for deserialized strings.
	* Source/include/NSSerialization.h: likewise.

Tue Jun  2  5:45:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/TcpPort.m: Fixed to compile cleanly under cygwin.
	* Source/UnixFileHandle.m: ditto
	* Source/NSHost.m: ditto
	* Source/NSProcessInfo.m: ditto
	* Source/NSRunLoop.m: ditto

Fri May 28 14:30:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSString.m: Fixed error on growing mutable strings - could
	cause unreasonable growth when generating property lists.

Thu May 27 11:00:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSArchiver.m: Fix memory leak reported by
	frederic.chauvin@lemel.fr and ready for garbage collection.
	* Source/NSUnarchiver.m: Ready for garbage collection.
	* Source/NSTimeZone.m: Fix memory leak reported by
	frederic.chauvin@lemel.fr. Ready for garbage collection.
	* Source/NSCalendarDate.m: Fix bug in decrementing date past start
	of month.  Ready for garbage collection.

Wed May 26 18:35:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/include/NSSerialization.h: include NSObject.h
	* Source/NSSerializer.m: Deserialization optimisation (15%)
	* Source/NSArray.m: write descriptions to cstrings.
	* Source/NSDictionary.m: write descriptions to cstrings.
	* Source/NSGCString.m: description optimisation (15%).

Wed May 26 12:25:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSUnarchiver.m: Fixed libobjects compatibility methods to