@@ -120,6 +120,54 @@
     return NO;
 }
 
+- (unsigned) hash
+{
+#if TYPE_ORDER == 0
+  return [data hash];
+#elif TYPE_ORDER == 1
+  union {
+    double d;
+    unsigned char c[sizeof(double)];
+  } val;
+  unsigned      hash = 0;
+  int           i;
+
+  val.d = data.x + data.y;
+  for (i = 0; i < sizeof(double); i++) {
+    hash += val.c[i];
+  }
+  return hash;
+#elif TYPE_ORDER == 2
+  return (unsigned)(gsaddr)data;
+#elif TYPE_ORDER == 3
+  union {
+    double d;
+    unsigned char c[sizeof(double)];
+  } val;
+  unsigned      hash = 0;
+  int           i;
+
+  val.d = data.origin.x + data.origin.y + data.size.width + data.size.height;
+  for (i = 0; i < sizeof(double); i++) {
+    hash += val.c[i];
+  }
+  return hash;
+#elif TYPE_ORDER == 4
+  union {
+    double d;
+    unsigned char c[sizeof(double)];
+  } val;
+  unsigned      hash = 0;
+  int           i;
+
+  val.d = data.width + data.height;
+  for (i = 0; i < sizeof(double); i++) {
+    hash += val.c[i];
+  }
+  return hash;
+#endif
+}
+
 - (const char *)objCType
 {
     typedef _dt = data;
